# binance_pipeline

./: .env.example  .gitignore  Makefile  README.md  monitor.sh  pyproject.toml  register_debezium.sh
airflow/dags/: dbt_run.py
dbt_project/: dbt_project.yml  profiles.yml
dbt_project/models/: candles_1m.sql
infrastructure/: Dockerfile  Dockerfile.airflow  Dockerfile.superset  docker-compose.yml  init.sql
infrastructure/clickhouse/config.d/: keeper.xml
src/common/: config.py  schemas.py
src/consumer/: main.py  s3_writer.py
src/ml_service/: main.py
src/producer/: main.py
